--- a/first-project/src/App.css
+++ b/first-project/src/App.css
@@ -8,3 +8,14 @@
   width: 1200px;
   margin: 0 auto;
 }
+
+.app-wrapper-content {
+    grid-area: cont;
+    background-color: red;
+}
+
+.app-wrapper-content img {
+  width:100%;
+  height:300px;
+  object-fit: cover;
+}
