--- a/first-project/src/components/Navbar/Navbar.module.css
+++ b/first-project/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,13 @@
 .nav {
     grid-area: nav;
     background-color: grey;
+    padding: 20px;
   }
-.item {
+.item a{
     color: white;
+    text-decoration: none;
 }  
+
+.item a.active {
+  color: gold;
+}
