--- a/first-project/src/components/Users/users.module.css
+++ b/first-project/src/components/Users/users.module.css
@@ -1,5 +1,5 @@
 .userPhoto {
-    width: 150px !important;
-    height: 150px !important;
-    border-radius: 40px;
+    width: 100px !important;
+    height: 100px !important;
+    border-radius: 50%;
 }
