--- a/first-project/src/components/Users/users.module.css
+++ b/first-project/src/components/Users/users.module.css
@@ -7,3 +7,10 @@
 .selectedPage {
     font-weight: bold;
 }
+
+.loading {
+width: 100px !important;
+height: 100px !important;
+background-color: #fff;
+
+}
