--- a/first-project/src/components/Profile/Profileinfo/Profileinfo.module.css
+++ b/first-project/src/components/Profile/Profileinfo/Profileinfo.module.css
@@ -2,3 +2,8 @@
     padding-top: 30px;
     padding-left: 30px;
 }
+.largePhoto {
+    width: 300px !important;
+    height: 300px !important;
+    object-fit: cover;
+}
