Refactored: настроено отображение рпрофиля пользователя, когда выбираешь его страницу

--- a/first-project/src/components/Profile/Profileinfo/Profileinfo.module.css
+++ b/first-project/src/components/Profile/Profileinfo/Profileinfo.module.css
@@ -7,3 +7,9 @@
     height: 300px !important;
     object-fit: cover;
 }
+
+.mainPhoto {
+    width:100%;
+    height:300px;
+    object-fit: cover;
+}
