Added Login button. Added Login Usability.

--- a/first-project/src/components/Header/Header.module.css
+++ b/first-project/src/components/Header/Header.module.css
@@ -6,3 +6,13 @@
   .header img {
     width: 60px;
   }
+  
+  .loginBlock {
+    float: right;
+  }
+
+  .loginBlock a {
+    color: white;
+    text-decoration: none;
+    font-size: large;
+  }
